--- a/sourse/webapp/templates/view_page.html
+++ b/sourse/webapp/templates/view_page.html
@@ -4,7 +4,7 @@ View
 {% endblock %}
 {% block nav %}
       <div class="navbar-nav">
-        <a class="nav-link" href="#">Edit</a>
+        <a class="nav-link" href="{% url 'edit' product.pk %}">Edit</a>
       </div>
       <div class="navbar-nav">
         <a class="nav-link" href="#">Delete</a>
