добавлена ссылка на удаление

--- a/sourse/webapp/templates/delete.html
+++ b/sourse/webapp/templates/delete.html
@@ -11,7 +11,7 @@
         <input class="delete_button" type="submit" value="Yes">
         <form action="{% url 'main' %}" target="_blank">
         <button class="delete_button">No</button>
-        </form>}
+        </form>
     </form>
 
 {% endblock %}
